src/sass/_user-page.scss
@use 'baseline';
@use 'functions';
@use 'settings';
@use 'typography';

.sciety-grid--user > .page-header--user {
  grid-column: 1 / -1;
}

.page-header--user {
  display: flex;
  align-items: center;

  .page-header__avatar {
    width: 48px;
    height: 48px;
    flex: 0 0 48px;
    margin-right: 1rem;
    border-radius: 50%;
  }

  .page-header__handle {
    font-size: functions.px-to-rem(26px);
    color: rgb(102, 102, 102);
  }
}

.user-page-contents {
  grid-column: 1 / -1;
}

@media screen and (min-width: 56.25em) {
  .sciety-grid--user > .user-page-contents {
    grid-column: 1 / 8;
  }
}

.followed-communities {
  margin-bottom: #{baseline.increments(6)};
}

.followed-communities__list {
  padding-left: 0;
}

.followed-communities__item {
  display: flex;
  align-items: center;
  margin-bottom: baseline.increments(1);
}

.followed-communities__item_link {
  @include typography.subtle-link;
  font-family: settings.$font-secondary;
  flex: 1 0 auto;
}

// TODO: extract to avatar mixin
$_avatar-size: 47px;
$_avatar-border-width: 1px;

.followed-communities__item_avatar {
  width: $_avatar-size;
  height: $_avatar-size;
  border: $_avatar-border-width solid settings.$colour-grey-one;
  border-radius: 50%;
  flex: 0 0 $_avatar-size;
  margin-right: 1.5rem;
}

.saved-articles {
  font-family: settings.$font-secondary;
  list-style: none;
  padding-left: 0;
}

.saved-articles__item {
  margin-bottom: baseline.increments(2);
}

.saved-articles__link {
  @include typography.subtle-link;
}

